test/conformance/chainsaw/events/clusterpolicy/no-events-upon-skip-generation/event.yaml
apiVersion: v1
kind: Event
metadata:
  namespace: default
involvedObject:
  apiVersion: kyverno.io/v1
  kind: ClusterPolicy
  name: default
reportingComponent: kyverno-generate
