test/conformance/chainsaw/events/clusterpolicy/no-events-upon-skip-generation/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-1
