test/conformance/chainsaw/events/clusterpolicy/no-events-upon-skip-generation/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: default
spec: {}
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
