test/conformance/chainsaw/events/clusterpolicy/no-events-upon-skip-generation/03-event.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: event
spec:
  try:
  - error:
      file: event.yaml
