test/conformance/chainsaw/events/clusterpolicy/no-events-upon-skip-generation/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: no-events-upon-skip-generation
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: default
  - name: step-02
    try:
    - apply:
        file: resource.yaml
  - name: step-03
    try:
    - error:
        file: event.yaml
